[package]
name = "bell"
version = "0.1.0"
edition = "2024"

[dependencies]
cosmic-text = "0.19.0"
dbus = "0.9.11"
dbus-crossroads = "0.5.3"
libc = "0.2.185"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
